# openai-rs

./: Cargo.toml  README.md
.github/workflows/: cargo.yaml
generator/: Cargo.toml
generator/src/: main.rs  openapi.rs  visit.rs
openai-http/: Cargo.toml
openai-http/src/: lib.rs
openai-openapi/: Cargo.toml
openai-openapi-generator/: Cargo.toml
openai-openapi-generator-macros/: Cargo.toml
openai-openapi-generator-macros/src/: lib.rs
openai-openapi-generator/src/: convert.rs  discriminator.rs  generator.rs  main.rs  misc.rs  openapi.rs  parse.rs  patch.rs  to_item_const.rs  to_item_enum.rs  to_item_fn.rs  to_item_struct.rs  to_items_fn.rs  visit.rs
openai-openapi-generator/src/generator/: discriminator.rs
openai-openapi-http/: Cargo.toml
openai-openapi-http/src/: event_stream.rs  generated.rs  json.rs  lib.rs  send.rs  send_future.rs  tests.rs
openai-openapi-types/: Cargo.toml
openai-openapi-types/src/: generated.rs  lib.rs  tests.rs
openai-openapi/src/: lib.rs  tests.rs
openai-types/: Cargo.toml
openai-types/src/: lib.rs
