[workspace]
members = ["openai-openapi", "openai-openapi-generator", "openai-openapi-generator-macros"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.95"
either = "1.15.0"
heck = "0.5.0"
indexmap = "2.9.0"
quote = "1.0.40"
serde = "1.0.217"
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_yaml = "0.9.33"
syn = "2.0.101"
typed-builder = "0.21.0"
