[workspace]
members = [
  "openai-openapi-generator",
  "openai-openapi-generator-macros",
  "openai-openapi-http",
  "openai-openapi-types",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4.5.40"
either = "1.15.0"
futures = "0.3.31"
heck = "0.5.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-server-sent-events = "0.2.1"
http-body-util = "0.1.3"
indexmap = "2.9.0"
lazy-regex = "3.4.1"
pin-project = "1.1.7"
quote = "1.0.40"
serde = "1.0.217"
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_yaml = "0.9.33"
syn = "2.0.101"
thiserror = "2.0.12"
tracing = "0.1.41"
typed-builder = "0.21.0"
