[package]
name = "openai-openapi-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
either.workspace = true
heck.workspace = true
indexmap = { workspace = true, features = ["serde"] }
openai-openapi-generator-macros.path = "../openai-openapi-generator-macros"
quote.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
syn = { workspace = true, features = ["full"] }
