[package]
name = "openai-openapi-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
either.workspace = true
heck.workspace = true
indexmap = { workspace = true, features = ["serde"] }
lazy-regex.workspace = true
openai-openapi-generator-macros.path = "../openai-openapi-generator-macros"
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["indexmap_2"] }
serde_yaml.workspace = true
syn = { workspace = true, features = ["full"] }
